<resources>
    <string name="app_name">Dice And Coin</string>
    <string name="first_question">Choose what to throw:</string>
    <string name="coin">Coin</string>
    <string name="dice">Dice</string>
    <string name="throw_coin">Throw coin</string>
    <string name="dice_type">Dice type</string>
    <string name="num_of_dice">Number of dice</string>
    <string name="combine">Combine dice?</string>
    <string name="throw_dice">Throw</string>
    <string name="settings">Settings</string>
    <string name="num_of_dice_hint">1 - 999</string>
    <string name="sort">Sort dice?</string>
    <string name="table_settings">Table settings</string>
    <string name="style_settings">Style settings</string>
    <string name="text_for_example">Text for example</string>
    <string name="button_example">Example</string>
    <string name="show">Show</string>
    <string name="none"> </string>
    <string name="cleanerText">Auto-clean table</string>
    <string name="dice_color">Dice color</string>
    <string-array name="dice_values">
        <item>Coin</item>
        <item>D4</item>
        <item>D6</item>
        <item>D8</item>
        <item>D10</item>
        <item>D12</item>
        <item>D16</item>
        <item>D20</item>
    </string-array>

</resources>